--- a/style.css
+++ b/style.css
@@ -34,6 +34,10 @@ img {
 }
 
 /*---------- BASE --------- */
+html{
+  scroll-behavior: smooth;
+}
+
 body {
   font: 400 1rem 'DM Sans', sans-serif;
   color: var(--text-color);
@@ -64,9 +68,24 @@ body {
   color: var(--title-color);
 }
 
-.divider1 {
+/* linhas de divisorias*/
+.divider-1 {
   height: 1px;
-  background: linear-gradient(270deg,(270deg, #e68b96 0%, rgba(219, 103, 120, 0.34) 100%));
+  background: linear-gradient(
+    270deg,
+    #e68b96,
+     rgba(255, 255, 255, 0.34)
+    );
+}
+
+/* linhas de divisorias*/
+.divider-2 {
+  height: 1px;
+  background: linear-gradient(
+    270deg,
+    rgba(255, 255, 255, 0.34),
+    #e68b96
+    );
 }
 
 /*---------- LAYOUT --------- */
@@ -84,6 +103,18 @@ body {
   padding: 5rem 0;
 }
 
+.section .title {
+  margin-bottom: 1rem;
+}
+
+.section header {
+  margin-bottom: 4rem;
+}
+
+.section header strong {
+  color: var(--base-color);
+}
+
 #header {
   border-bottom: 1px solid #e4e4e4;
   margin-bottom: 2rem;
@@ -94,6 +125,10 @@ body {
   z-index: 100;
   background-color: var(--body-color);
   width: 100%;
+}
+
+#header.scroll {
+  box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.2);
 }
 
 main {
@@ -152,6 +187,12 @@ nav ul li a:hover::after {
 nav .menu {
   opacity: 0;
   visibility: hidden;
+  top: -20rem;
+  transition: 0.2s;
+}
+
+nav .menu ul {
+  display: none;
 }
 
 /* Mostrar menu */
@@ -167,11 +208,13 @@ nav.show .menu {
   position: fixed;
   top: 0;
   left: 0;
-}
 
-nav.show .menu {
   display: grid;
   place-content: center;
+}
+
+nav.show .menu ul {
+  display: grid;
 }
 
 nav.show ul.grid {
@@ -190,14 +233,16 @@ nav .icon-close {
   opacity: 0%;
   
   position: absolute;
+  top: -1.5rem;
   right: 1.5rem;
   
-  /*transição bacana*/
+  transition: 0.2s;
 }
 
 nav.show div.icon-close{
   visibility: visible;
   opacity: 100%;
+  top: 1.5rem;
 }
 
 /*---------- HOME --------- */
@@ -247,4 +292,78 @@ nav.show div.icon-close{
 #home .text p {
   margin-bottom: 2rem;
   max-width: 100%;
+}
+
+/*---------- ABOUT --------- */
+#about {
+  background: white;
+}
+
+#about .container {
+  margin: 0;
+}
+
+#about .image {
+  position: relative;
+}
+
+#about .image::before {
+  content: '';
+  height: 100%;
+  width: 100%;
+  background: var(--base-color-second);
+  position: absolute;
+  top: -8.3%;
+  left: -33%;
+  z-index: 0;
+}
+
+#about .image img {
+  position: relative;
+  
+}
+
+#about .image img,
+#about .image::before {
+  border-radius: 0.25rem;
+}
+
+#about .text {
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
+}
+
+#about h4 {
+  color: var(--base-color);
+  font-size: 1.2rem;
+}
+
+#about .purposes{
+  text-align: center;
+}
+
+/*---------- SERVICES --------- */
+
+.cards.grid {
+  gap: 1.5rem;
+}
+
+.card {
+  padding: 3.625rem 2rem;
+  box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.08);
+  border-bottom: 0.25rem solid var(--base-color);
+  border-radius: 0.25rem 0.25rem 0 0 ;
+  text-align: center;
+}
+
+.card i{
+  display: block;
+  margin-bottom: 1.5rem;
+  font-size: 5rem;
+  color:var(--base-color);
+}
+
+.card .title {
+  font-size: 1.5rem;
+  margin-bottom: 0.75rem;
 }
