--- a/style.css
+++ b/style.css
@@ -22,33 +22,40 @@ img {
   --header-height: 4.5rem;
 
   /* colors */
-  --hue: 159;
+  --hue: 990;
   /* HSL color mode */
-  --base-color: #bf2132;
-  --base-color-second: #eba2ad;
-  --base-color-alt: #faaab6;
+  --base-color: hsl(var(--hue) 36% 57%);
+  --base-color-second: hsl(var(--hue) 65% 88%);
+  --base-color-alt: hsl(var(--hue) 57% 53%);
   --title-color: hsl(var(--hue) 41% 10%);
   --text-color: hsl(0 0% 46%);
   --text-color-light: hsl(0 0% 98%);
   --body-color: hsl(0 0% 98%);
+
+  /* fonts */
+  --title-font-size: 1.875rem;
+  --subtitle-font-size: 1rem;
+
+  --title-font: 'Poppins', sans-serif;
+  --body-font: 'DM Sans', sans-serif;
 }
 
 /*---------- BASE --------- */
-html{
+html {
   scroll-behavior: smooth;
 }
 
 body {
-  font: 400 1rem 'DM Sans', sans-serif;
+  font: 400 1rem var(--body-font);
   color: var(--text-color);
   background: var(--body-color);
   -webkit-font-smoothing: antialiased;
 }
 
 .title {
-  font: 700 1.875rem 'Poppins', sans-serif;
+  font: 700 var(--title-font-size) var(--title-font);
   color: var(--title-color);
-  -webkit-font-smoothing: antialiased;
+  -webkit-font-smoothing: auto;
 }
 
 .button {
@@ -59,7 +66,7 @@ body {
   align-items: center;
   padding: 0 2rem;
   border-radius: 0.25rem;
-  font: 500 1rem 'DM Sans', sans-serif;
+  font: 500 1rem var(--body-font);
   transition: background 0.3s;
 }
 
@@ -73,9 +80,9 @@ body {
   height: 1px;
   background: linear-gradient(
     270deg,
-    #e68b96,
-     rgba(255, 255, 255, 0.34)
-    );
+    hsla(var(--hue), 36%, 57%, 1),
+    hsla(var(--hue), 65%, 88%, 0.34)
+  );
 }
 
 /* linhas de divisorias*/
@@ -83,9 +90,9 @@ body {
   height: 1px;
   background: linear-gradient(
     270deg,
-    rgba(255, 255, 255, 0.34),
-    #e68b96
-    );
+    hsla(var(--hue), 65%, 88%, 0.34),
+    hsla(var(--hue), 36%, 57%, 1)
+  );
 }
 
 /*---------- LAYOUT --------- */
@@ -100,11 +107,15 @@ body {
 }
 
 .section {
-  padding: 5rem 0;
+  padding: calc(5rem + var(--header-height)) 0;
 }
 
 .section .title {
   margin-bottom: 1rem;
+}
+
+.section .subtitle {
+  font-size: var(--subtitle-font-size);
 }
 
 .section header {
@@ -119,6 +130,7 @@ body {
   border-bottom: 1px solid #e4e4e4;
   margin-bottom: 2rem;
   display: flex;
+
   position: fixed;
   top: 0;
   left: 0;
@@ -131,13 +143,9 @@ body {
   box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.2);
 }
 
-main {
-  margin-top: calc(var(--header-height) + 2rem);
-}
-
 /*---------- LOGO --------- */
 .logo {
-  font: 700 1.31rem 'Poppins', sans-serif;
+  font: 700 1.31rem var(--title-font);
   color: var(--title-color);
 }
 
@@ -145,7 +153,7 @@ main {
   color: var(--base-color);
 }
 
-.logo-alt span{
+.logo-alt span {
   color: var(--body-color);
 }
 /*---------- NAVIGATION --------- */
@@ -167,7 +175,8 @@ nav ul li a {
   position: relative;
 }
 
-nav ul li a:hover {
+nav ul li a:hover,
+nav ul li a.active {
   color: var(--base-color);
 }
 
@@ -184,7 +193,8 @@ nav ul li a::after {
   transition: width 0.2s;
 }
 
-nav ul li a:hover::after {
+nav ul li a:hover::after,
+nav ul li a.active::after {
   width: 100%;
 }
 
@@ -235,15 +245,15 @@ nav.show ul.grid {
 nav .icon-close {
   visibility: hidden;
   opacity: 0%;
-  
+
   position: absolute;
   top: -1.5rem;
   right: 1.5rem;
-  
+
   transition: 0.2s;
 }
 
-nav.show div.icon-close{
+nav.show div.icon-close {
   visibility: visible;
   opacity: 100%;
   top: 1.5rem;
@@ -256,6 +266,7 @@ nav.show div.icon-close{
 
 #home .container {
   margin: 0;
+  padding: 5rem;
 }
 
 #home .image {
@@ -295,7 +306,6 @@ nav.show div.icon-close{
 
 #home .text p {
   margin-bottom: 2rem;
-  max-width: 100%;
 }
 
 /*---------- ABOUT --------- */
@@ -305,6 +315,7 @@ nav.show div.icon-close{
 
 #about .container {
   margin: 0;
+  padding-top: 5rem;
 }
 
 #about .image {
@@ -317,13 +328,14 @@ nav.show div.icon-close{
   width: 100%;
   background: var(--base-color-second);
   position: absolute;
-  top: -8.3%;
-  left: -33%;
+  top: -16.8%;
+  left: -16.8%;
   z-index: 0;
 }
 
 #about .image img {
   position: relative;
+  left: 2rem;
 }
 
 #about .image img,
@@ -336,13 +348,8 @@ nav.show div.icon-close{
   margin-right: 1.5rem;
 }
 
-#about h4 {
-  color: var(--base-color);
-  font-size: 1.2rem;
-}
-
-#about .purposes{
-  text-align: center;
+#about strong {
+  color:var(--base-color);
 }
 
 /*---------- SERVICES --------- */
@@ -355,15 +362,15 @@ nav.show div.icon-close{
   padding: 3.625rem 2rem;
   box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.08);
   border-bottom: 0.25rem solid var(--base-color);
-  border-radius: 0.25rem 0.25rem 0 0 ;
+  border-radius: 0.25rem 0.25rem 0 0;
   text-align: center;
 }
 
-.card i{
+.card i {
   display: block;
   margin-bottom: 1.5rem;
   font-size: 5rem;
-  color:var(--base-color);
+  color: var(--base-color);
 }
 
 .card .title {
@@ -391,16 +398,14 @@ nav.show div.icon-close{
   padding: 2rem;
   box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.08);
   border-radius: 0.25rem;
-
 }
 
 #testimonials blockquote p {
   position: relative;
   text-indent: 1.875rem;
   margin-bottom: 1.5rem;
-  color: var(--title-color)
+  color: var(--title-color);
 }
-
 
 #testimonials blockquote p span {
   font: 700 2.5rem serif;
@@ -408,14 +413,13 @@ nav.show div.icon-close{
   top: -0.375rem;
   left: -1.875rem;
   color: var(--base-color);
-  
 }
 
 #testimonials cite {
   display: flex;
   align-items: center;
   font-style: normal;
-  color:var(--base-color)
+  color: var(--base-color);
 }
 
 #testimonials cite img {
@@ -469,14 +473,18 @@ nav.show div.icon-close{
   color: var(--base-color);
 }
 
-#contact strong{
+#contact strong {
   color: var(--base-color);
 }
 
 /*---------- FOOTER --------- */
 
 footer {
-  background: #bf2131d5;
+  background: var(--base-color);
+}
+
+footer.section {
+  padding: 4rem 0;
 }
 
 footer .logo {
@@ -491,17 +499,21 @@ footer .brand p {
 
 footer i {
   font-size: 1.5rem;
-  color: var(--text-color-light)
+  color: var(--text-color-light);
 }
 
-footer .social a{
-  margin-right: 2rem;
+footer .social {
+  grid-auto-flow: column;
+  width: fit-content;
+}
+
+footer .social a {
   transition: 0.3s;
   display: inline-block;
 }
 
 footer .social a:hover {
-  transform: translateY(-15px);
+  transform: translateY(-8px);
 }
 
 /* Footer - back to top */
@@ -535,9 +547,299 @@ footer .social a:hover {
 /*---------- MEDIA QUERIES --------- */
 /* --------- Responsivo ------------ */
 /* extra large devices: 1200 > */
+@media (min-width: 1200px) {
+  /* reusable classes */
+  .container {
+    max-width: 1120px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .section {
+    padding: 10rem 0;
+  }
+
+  .section header,
+  #testimonials header {
+    max-width: 32rem;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .button {
+    height: 3.125rem;
+  }
+
+  /* navigation */
+  nav .menu {
+    opacity: 1;
+    visibility: visible;
+    top: 0;
+  }
+
+  nav .menu ul {
+    display: flex;
+    gap: 2rem;
+  }
+
+  nav .menu ul li a.title {
+    font: 400 1rem var(--body-font);
+    -webkit-font-smoothing: antialiased;
+  }
+
+  nav .menu ul li a.title.active {
+    font-weight: bold;
+    -webkit-font-smoothing: auto;
+  }
+
+  nav .icon-menu {
+    display: none;
+  }
+
+  /* layout */
+  main {
+    margin-top: var(--header-height);
+  }
+
+  /* home */
+  #home .container {
+    grid-auto-flow: column;
+    justify-content: space-between;
+    margin: 0 auto;
+  }
+
+  #home .image {
+    order: 1;
+  }
+
+  #home .image img{
+    width:190%;
+  }
+
+  #home .image::before {
+    width: 190%;
+  }
+
+  #home .text {
+    order: 0;
+    max-width: 24rem;
+    text-align: left;
+    margin-right: 12rem;
+  }
+
+  /* about */
+  #about .container {
+    margin: 0 auto;
+    grid-auto-flow: column;
+  }
+
+  #about .image img {
+    width:130%;
+    margin-right: 6rem;
+  }
+
+  #about .image::before {
+    width: 130%;
+  }
+
+  #about .text {
+    margin-left: 11rem;
+    text-align: right;
+  }
+
+  /* services */
+  .cards {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  .card {
+    padding-left: 3rem;
+    padding-right: 3rem;
+  }
+
+  /* testimonials */
+  #testimonials .container {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  /* contact */
+  #contact .container {
+    grid-auto-flow: column;
+    align-items: center;
+  }
+
+  #contact .text {
+    max-width: 25rem;
+  }
+
+  /* footer */
+  footer.section {
+    padding: 3.75rem 0;
+  }
+
+  footer .container {
+    grid-auto-flow: column;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  footer .logo {
+    font-size: 2.25rem;
+  }
+}
+
 /* large devices: 1023 > */
+@media (min-width: 1023px) {
+  /* reusable classes */
+  .container {
+    max-width: 1120px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .section {
+    padding: 10rem 0;
+  }
+
+  .section header,
+  #testimonials header {
+    max-width: 32rem;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .button {
+    height: 3.125rem;
+  }
+
+  /* navigation */
+  nav .menu {
+    opacity: 1;
+    visibility: visible;
+    top: 0;
+  }
+
+  nav .menu ul {
+    display: flex;
+    gap: 2rem;
+  }
+
+  nav .menu ul li a.title {
+    font: 400 1rem var(--body-font);
+    -webkit-font-smoothing: antialiased;
+  }
+
+  nav .menu ul li a.title.active {
+    font-weight: bold;
+    -webkit-font-smoothing: auto;
+  }
+
+  nav .icon-menu {
+    display: none;
+  }
+
+  /* layout */
+  main {
+    margin-top: var(--header-height);
+  }
+
+  /* home */
+  #home .container {
+    grid-auto-flow: column;
+    justify-content: space-between;
+    margin: 0 auto;
+  }
+
+  #home .image {
+    order: 1;
+  }
+
+  #home .image img{
+    width:170%;
+    margin-right: 19rem;
+  }
+
+  #home .image::before {
+    width: 190%;
+  }
+
+  #home .text {
+    order: 0;
+    max-width: 24rem;
+    text-align: left;
+    margin-right: 12rem;
+  }
+
+  /* about */
+  #about .container {
+    margin: 0 auto;
+    grid-auto-flow: column;
+  }
+
+  #about .image img {
+    width:130%;
+    margin-right: 6rem;
+  }
+
+  #about .image::before {
+    width: 130%;
+  }
+
+  #about .text {
+    margin-left: 11rem;
+    text-align: right;
+  }
+
+  /* services */
+  .cards {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  .card {
+    padding-left: 3rem;
+    padding-right: 3rem;
+  }
+
+  /* testimonials */
+  #testimonials .container {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  /* contact */
+  #contact .container {
+    grid-auto-flow: column;
+    align-items: center;
+  }
+
+  #contact .text {
+    max-width: 25rem;
+  }
+
+  /* footer */
+  footer.section {
+    padding: 3.75rem 0;
+  }
+
+  footer .container {
+    grid-auto-flow: column;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  footer .logo {
+    font-size: 2.25rem;
+  }
+}
+
 /* large devices: 992 > */
 @media (min-width: 992px) {
-
+  :root {
+    --title-font-size: 2.25rem;
+    --subtitle-font-size: 1.125rem;
+  }
 }
 /* medium devices: 767 > */
